added a new navbar category

--- a/JS.html
+++ b/JS.html
@@ -9,25 +9,28 @@
   </head>
   <body>
     <div class="fade-in">
-      <nav data-bs-theme="dark" class="navbar bg-body-tertiary">
-         <div class="container-fluid">
-      <ul class="nav">
-      <li class="nav-item"><a href="index.html">Home</a></li>
-      <li class="nav-item">
-        <a href="#">Accomplishments of the Gupta Empire</a>
-        <ul class="submenu">
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Math.html">Mathematics</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Astronomy.html">Astronomy</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Medicene.html">Medicene</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Literature.html">Literature</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Education.html">Education</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="JS.html">Judicial System</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Arts.html">Arts</a></li>
+      <div id="navbar">
+        <nav data-bs-theme="dark" class="navbar bg-body-tertiary">
+           <div class="container-fluid">
+        <ul class="nav">
+        <li class="nav-item"><a href="index.html">Home</a></li>
+        <li class="nav-item">
+          <a href="#">Accomplishments of the Gupta Empire</a>
+          <ul class="submenu">
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Math.html">Mathematics</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Astronomy.html">Astronomy</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Medicene.html">Medicene</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Literature.html">Literature</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Education.html">Education</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="JS.html">Judicial System</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Arts.html">Arts</a></li>
+          </ul>
+        </li>
+          <li class="nav-item"><a href="result.html">Results from Chandra Gupta I's effors</a></li>
         </ul>
-      </li>
-      </ul>
-         </div>
-        </nav>
+           </div>
+           </div>
+          </nav>
     <h2>How did the legal system work?</h2>
     <p>The Gupta Empire had a special legal system that helped keep society in order and settle disagreements. Disputes were first handled locally by the village assembly or trade guild. The King was in charge of the highest court, with judges, ministers, and priests assisting him. They made decisions based on laws, customs, and sometimes the King's orders. Punishments for wrongdoers were usually gentle, showing the forgiving nature of the legal system at that time.</p>
     <h2>How was it useful?</h2>
