--- a/Literature.html
+++ b/Literature.html
@@ -7,25 +7,28 @@
   </head>
   <body>
     <div class="fade-in">
-      <nav data-bs-theme="dark" class="navbar bg-body-tertiary">
-         <div class="container-fluid">
-      <ul class="nav">
-      <li class="nav-item"><a href="index.html">Home</a></li>
-      <li class="nav-item">
-        <a href="#">Accomplishments of the Gupta Empire</a>
-        <ul class="submenu">
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Math.html">Mathematics</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Astronomy.html">Astronomy</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Medicene.html">Medicene</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Literature.html">Literature</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Education.html">Education</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="JS.html">Judicial System</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Arts.html">Arts</a></li>
+      <div id="navbar">
+        <nav data-bs-theme="dark" class="navbar bg-body-tertiary">
+           <div class="container-fluid">
+        <ul class="nav">
+        <li class="nav-item"><a href="index.html">Home</a></li>
+        <li class="nav-item">
+          <a href="#">Accomplishments of the Gupta Empire</a>
+          <ul class="submenu">
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Math.html">Mathematics</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Astronomy.html">Astronomy</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Medicene.html">Medicene</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Literature.html">Literature</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Education.html">Education</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="JS.html">Judicial System</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Arts.html">Arts</a></li>
+          </ul>
+        </li>
+          <li class="nav-item"><a href="result.html">Results from Chandra Gupta I's effors</a></li>
         </ul>
-      </li>
-      </ul>
-         </div>
-        </nav>
+           </div>
+           </div>
+          </nav>
     <h2>What was worked on?</h2>
     <p>
     During the Gupta Dynasty, literature reached great heights, mainly focusing on poetry and romantic comedies that explored human behavior rather than religious themes. Supported by rulers like Chandragupta II, Sanskrit literature flourished with famous poets such as Kalidasa. Prakrit literature, shown through works like the Paumacariyam, also did well. This period also saw the completion of Vedic Puranas, including the well-liked Markandeya Purana, reflecting the widespread worship of goddess Durga.</p>
