--- a/Arts.html
+++ b/Arts.html
@@ -9,25 +9,28 @@
   </head>
   <body>
     <div class="fade-in">
-      <nav data-bs-theme="dark" class="navbar bg-body-tertiary">
-         <div class="container-fluid">
-      <ul class="nav">
-      <li class="nav-item"><a href="index.html">Home</a></li>
-      <li class="nav-item">
-        <a href="#">Accomplishments of the Gupta Empire</a>
-        <ul class="submenu">
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Math.html">Mathematics</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Astronomy.html">Astronomy</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Medicene.html">Medicene</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Literature.html">Literature</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Education.html">Education</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="JS.html">Judicial System</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Arts.html">Arts</a></li>
+      <div id="navbar">
+        <nav data-bs-theme="dark" class="navbar bg-body-tertiary">
+           <div class="container-fluid">
+        <ul class="nav">
+        <li class="nav-item"><a href="index.html">Home</a></li>
+        <li class="nav-item">
+          <a href="#">Accomplishments of the Gupta Empire</a>
+          <ul class="submenu">
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Math.html">Mathematics</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Astronomy.html">Astronomy</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Medicene.html">Medicene</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Literature.html">Literature</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Education.html">Education</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="JS.html">Judicial System</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Arts.html">Arts</a></li>
+          </ul>
+        </li>
+          <li class="nav-item"><a href="result.html">Results from Chandra Gupta I's effors</a></li>
         </ul>
-      </li>
-      </ul>
-         </div>
-        </nav>
+           </div>
+           </div>
+          </nav>
     <h2>What was arts role in Gupta Society?</h2>
     <p>The Gupta Empire, renowned for its significant accomplishments across different domains, especially in the realms of arts and culture, is frequently celebrated as a prime era of unparalleled artistic excellence in North India. This epoch experienced a thriving creative output, supported by historical evidence pointing to a lively tradition of painting. Nevertheless, the existing artistic remnants primarily comprise religious sculptures, serving as tangible evidence of the empire's deep impact on religious artistry.</p>
     <h2>Rise of Arts in the Gupta Empire</h2>
