--- a/Education.html
+++ b/Education.html
@@ -7,25 +7,28 @@
   </head>
   <body>
     <div class="fade-in">
-      <nav data-bs-theme="dark" class="navbar bg-body-tertiary">
-         <div class="container-fluid">
-      <ul class="nav">
-      <li class="nav-item"><a href="index.html">Home</a></li>
-      <li class="nav-item">
-        <a href="#">Accomplishments of the Gupta Empire</a>
-        <ul class="submenu">
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Math.html">Mathematics</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Astronomy.html">Astronomy</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Medicene.html">Medicene</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Literature.html">Literature</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Education.html">Education</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="JS.html">Judicial System</a></li>
-          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Arts.html">Arts</a></li>
+      <div id="navbar">
+        <nav data-bs-theme="dark" class="navbar bg-body-tertiary">
+           <div class="container-fluid">
+        <ul class="nav">
+        <li class="nav-item"><a href="index.html">Home</a></li>
+        <li class="nav-item">
+          <a href="#">Accomplishments of the Gupta Empire</a>
+          <ul class="submenu">
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Math.html">Mathematics</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Astronomy.html">Astronomy</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Medicene.html">Medicene</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Literature.html">Literature</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Education.html">Education</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="JS.html">Judicial System</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Arts.html">Arts</a></li>
+          </ul>
+        </li>
+          <li class="nav-item"><a href="result.html">Results from Chandra Gupta I's effors</a></li>
         </ul>
-      </li>
-      </ul>
-         </div>
-        </nav>
+           </div>
+           </div>
+          </nav>
     <h2>Importance of Education to the Gupta Empire</h2>
     <p>Education was highly valued during the Gupta era, shaping society and promoting intellectual growth. The Gupta ethos emphasized providing primary schooling to everyone, regardless of background or social status, reflecting a progressive society that valued empowering individuals through knowledge.</p>
     <h2>How Education was like</h2>
