--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
   <div class="part1">
     <h2 style="text-align: center;">Who was Chandra Gupta I?</h2>
 
-    <div class="card" style="width: 18rem;">
-      <img src="https://qph.cf2.quoracdn.net/main-qimg-7a052267f0ffa2a51746b82cd94d62f3.webp" class="card-img-top" alt="Artwork of Chandra Gupta I">
+      <img src="https://qph.cf2.quoracdn.net/main-qimg-7a052267f0ffa2a51746b82cd94d62f3.webp" class="img1" alt="Artwork of Chandra Gupta I">
       <img src="https://qph.cf2.quoracdn.net/main-qimg-76e85fe35ec9c7b28f71aafd7417a6c1-lq" class="img2" alt="another drawing">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f0/Territories_of_Chandragupta_I.png/220px-Territories_of_Chandragupta_I.png" class="img3">
+  
       <div class="card-body">
     
         <br>
