finished result.html

--- a/result.html
+++ b/result.html
@@ -7,6 +7,36 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    
+    <div class="fade-in">
+      <div id="navbar">
+        <nav data-bs-theme="dark" class="navbar bg-body-tertiary">
+           <div class="container-fluid">
+        <ul class="nav">
+        <li class="nav-item"><a href="index.html">Home</a></li>
+        <li class="nav-item">
+          <a href="#">Accomplishments of the Gupta Empire</a>
+          <ul class="submenu">
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Math.html">Mathematics</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Astronomy.html">Astronomy</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Medicene.html">Medicene</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Literature.html">Literature</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Education.html">Education</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="JS.html">Judicial System</a></li>
+            <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Arts.html">Arts</a></li>
+          </ul>
+        </li>
+          <li class="nav-item"><a href="result.html">Results from Chandra Gupta I's effors</a></li>
+        </ul>
+           </div>
+           </div>
+          </nav>
+      <h1>Results of Chandra Gupta I's efforts</h1>
+      <p>As a result of the efforts of Chandra Gupta I, he was able to create the base for the next 2 generations of his family.</p>
+  <h2>Family Tree of Chandra Gupta I</h2>
+      <h3>Samudragupta</h3>
+      <p>The next heir of the Gupta Dynasty, or his son, was Samudragupta. As the ruler, he continued on the expansion of the Gupta Empire. With his great military skills that were taught to him from his father, he won many battles. It is said that won over 100 battles and acquired 100 wounds that looked like marks of glory and acquired the title Prakrama, which means victorious. As a result, he conquered the entirety of North India.</p>
+      <h3>Chandra Gupta II</h3>
+      <p>As a heir of the Gupta Dynasty, his job was to maintain all of the land aquired from his father. He defeated rival kingdoms to the east and expanded the Gupta Empire to the Arabian Sea. He built and strengthened the navy which led to increased sea trade. He was also very charitable, making donations to numerous charitable donations to the creation of hospitals and orphanages. Along with that, he built rest houses for travelers and traders along roadsides which benefitted transportation throughout the empire.  </p>
+    </div>
   </body>
 </html>
