--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
   <h1  class="cgi" style="text-align: center; id="header1">Chandra Gupta I</h1>
   <div class="part1">
     <h2 style="text-align: center;">Who was Chandra Gupta I?</h2>
-
+<p class="imgp">
       <img src="https://qph.cf2.quoracdn.net/main-qimg-7a052267f0ffa2a51746b82cd94d62f3.webp" class="img1" alt="Artwork of Chandra Gupta I">
       <img src="https://qph.cf2.quoracdn.net/main-qimg-76e85fe35ec9c7b28f71aafd7417a6c1-lq" class="img2" alt="another drawing">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f0/Territories_of_Chandragupta_I.png/220px-Territories_of_Chandragupta_I.png" class="img3">
-  
+</p>
       <div class="card-body">
     
         <br>
-        <p class="card-text">The first ruler of the Gupta Dynasty (319 to 467 CE).</p>
+        <p style="width: 400px;" class="card-text">The first ruler of the Gupta Dynasty (319 to 467 CE).</p>
       </div>
     </div>
     
