fixed footer rq

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   </div>
   </div>
   <br>
-  <footer>Created By Henri Tarelli, for the World History Project, School located at 925 Astor Ave</footer>
+  <footer>Created By Henri, for the World History Project</footer>
   <script src="script.js"></script>
 </body>
 
