--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Arts.html">Arts</a></li>
     </ul>
   </li>
-    <li class="nav-item"><a href="result.html">Results from Chandra Gupta I's effors</a></li>
+    <li class="nav-item"><a href="result.html">Results from Chandra Gupta I's efforts</a></li>
   </ul>
      </div>
      </div>
